--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ volatile = "0.2.6"
 spin = "0.9"
 x86_64 = "0.15"
 uart_16550 = "0.3"
+pic8259 = "0.11.0"
 
 [package.metadata.bootimage]
 test-args = [
@@ -23,3 +24,8 @@ test-args = [
 ]
 test-success-exit-code = 33 # (0x10 << 1) | 1
 test-timeout = 300 # seconds
+
+
+[[test]]
+name = "stack_overflow"
+harness = false
