--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ spin = "0.9"
 x86_64 = "0.15"
 uart_16550 = "0.3"
 pic8259 = "0.11.0"
+pc-keyboard = "0.7.0"
 
 [package.metadata.bootimage]
+run-args = ["-display", "gtk,show-tabs=on,zoom-to-fit=on"]
 test-args = [
     "-device",
     "isa-debug-exit,iobase=0xf4,iosize=0x04",
