--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bootloader = "0.9"
+bootloader = { version = "0.9", features = ["map_physical_memory"] }
 volatile = "0.2.6"
 spin = "0.9"
 x86_64 = "0.15"
 uart_16550 = "0.3"
 pic8259 = "0.11.0"
 pc-keyboard = "0.7.0"
+talc = "4.3.1"
 
 [package.metadata.bootimage]
 run-args = ["-display", "gtk,show-tabs=on,zoom-to-fit=on"]
